chore: follow tutorial to set up basics
- add animations and bazel compiler

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-landing></app-landing>
 <div class="container">
-
-  <router-outlet></router-outlet>
+  <app-landing></app-landing>
+  <div id="content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
