--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -10,10 +10,10 @@
 <div class="row">
   <ul class="list-group list-group-horizontal">
     <li class="list-group-item">
-      <a href="/" class="btn btn-link">Start a New Project</a>
+      <a routerLink="/" class="btn btn-link">Start a New Project</a>
     </li>
     <li class="list-group-item">
-      <a href="/" class="btn btn-link">View Projects</a>
+      <a routerLink="/" class="btn btn-link">View Projects</a>
     </li>
   </ul>
 </div>
