--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 /* @import '~bootstrap/dist/css/bootstrap.min.css'; */
+body {
+  margin: 0;
+  height: 100vh;
+  background: #f2f2f2;
+}
+
+#container {
+  display: grid;
+  grid-template-rows: 60px auto;
+  height: 100%;
+}
