--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-landing></app-landing>
+  <app-header></app-header>
   <div id="content">
     <router-outlet></router-outlet>
   </div>
