--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<div class="container">
+<div>
   <app-header></app-header>
-  <div id="content">
-    <router-outlet></router-outlet>
+  <div class="container">
+    <div id="content">
+      <router-outlet></router-outlet>
+    </div>
   </div>
+  <app-footer></app-footer>
 </div>
