feat: add profile module and routing

--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -25,7 +25,9 @@
           ></path>
         </g>
       </svg>
-      <small class="d-block mb-3 text-muted">&copy; {{ copyRightYear }}</small>
+      <small class="d-block mb-3 text-muted"
+        >&copy; {{ copyRightYear | date: "yyyy" }}</small
+      >
     </div>
     <div class="col-6 col-md">
       <h5>Features</h5>
