--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -11,15 +11,4 @@
     </div>
   </div>
 </div>
-<div class="row">
-  <ul class="list-group list-group-horizontal">
-    <li class="list-group-item">
-      <a routerLink="/projects/detail/0" class="btn btn-link"
-        >Start a New Project</a
-      >
-    </li>
-    <li class="list-group-item">
-      <a routerLink="/projects" class="btn btn-link">View Projects</a>
-    </li>
-  </ul>
-</div>
+<div class="row"></div>
