--- a/src/app/person/profile/profile.component.html
+++ b/src/app/person/profile/profile.component.html
@@ -1,3 +1,18 @@
-<p>
-  profile works!
-</p>
+<div class="container mt-5" *ngIf="profile">
+  <div class="row align-items-center profile-header">
+    <div class="col-md-2">
+      <img
+        [src]="profile.picture"
+        class="rounded-circle img-fluid profile-picture"
+      />
+    </div>
+    <div class="col-md">
+      <h2>{{ profile.name }}</h2>
+      <p class="lead text-muted">{{ profile.email }}</p>
+    </div>
+  </div>
+
+  <div class="row" *ngIf="profileJson">
+    <pre class="rounded"><code class="json">{{profileJson}}</code></pre>
+  </div>
+</div>
