--- a/src/app/person/profile/profile.component.html
+++ b/src/app/person/profile/profile.component.html
@@ -1,13 +1,13 @@
 <div class="container mt-5" *ngIf="profile">
   <div class="row align-items-center profile-header">
     <div class="col-md-2">
-      <img
-        [src]="profile.picture"
+      <!-- <img
+        [src]="profileGQL.avatar"
         class="rounded-circle img-fluid profile-picture"
-      />
+      /> -->
     </div>
     <div class="col-md">
-      <h2>{{ profile.name }}</h2>
+      <h2>{{ profile.username }}</h2>
       <p class="lead text-muted">{{ profile.email }}</p>
     </div>
   </div>
