--- a/src/app/qa-project/project-form/project-form.component.html
+++ b/src/app/qa-project/project-form/project-form.component.html
@@ -1,55 +1,149 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="projectFormGroup">
-<div class="row">
-  <div class="form-group col-md-6">
-    <label for="name" class="font-weight-bold">Name</label>
-    <input type="text" id="name" class="form-control" formControlName="name">
-  </div>
+<!-- <button
+  type="button"
+  class="btn btn-primary"
+  data-toggle="modal"
+  data-target="#exampleModal"
+>
+  New
+</button> -->
 
-  <div class="form-group col-md-6">
-    <label for="relname" class="font-weight-bold">Release Name</label>
-    <input type="text" id="relname" class="form-control" formControlName="releaseName">
-  </div>
+<app-new-project></app-new-project>
 
-  <div class="form-group col-md-6">
-    <label for="qaname" class="font-weight-bold">Tested By</label>
-    <input type="text" id="qaname" class="form-control" formControlName="lead">
-  </div>
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="exampleModal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Create New Project</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form (ngSubmit)="onSubmit()" [formGroup]="projectFormGroup">
+          <div class="row">
+            <div class="form-group col-md-6">
+              <label for="name" class="font-weight-bold">Name</label>
+              <input
+                type="text"
+                id="name"
+                class="form-control"
+                formControlName="name"
+              />
+            </div>
 
-  <div class="form-group col-md-6">
-    <label for="custname" class="font-weight-bold">Customer Name</label>
-    <input type="text" id="custname" class="form-control" formControlName="customerName">
-  </div>
+            <div class="form-group col-md-6">
+              <label for="relname" class="font-weight-bold">Release Name</label>
+              <input
+                type="text"
+                id="relname"
+                class="form-control"
+                formControlName="releaseName"
+              />
+            </div>
 
-  <div class="form-group col-md-6">
-    <label for="sysname" class="font-weight-bold">System</label>
-    <select id="sysname" class="form-control" formControlName="system">
-      <option value="">Please Select</option>
-      <option [value]="sysn.id" *ngFor="let sysn of sysnames">{{sysn.name}}</option>
-    </select>
-  </div>
+            <div class="form-group col-md-6">
+              <label for="qaname" class="font-weight-bold">Tested By</label>
+              <input
+                type="text"
+                id="qaname"
+                class="form-control"
+                formControlName="lead"
+              />
+            </div>
 
-  <div class="form-group col-md-6">
-    <label for="envname" class="font-weight-bold">Environment Name</label>
-    <select id="envname" class="form-control" formControlName="environment">
-      <option value="">Please Select</option>
-      <option [value]="evn.id" *ngFor="let env of envnames">{{env.name}}</option>
-    </select>
-  </div>
+            <div class="form-group col-md-6">
+              <label for="custname" class="font-weight-bold"
+                >Customer Name</label
+              >
+              <input
+                type="text"
+                id="custname"
+                class="form-control"
+                formControlName="customerName"
+              />
+            </div>
 
-  <div class="form-group col-md-6">
-    <label for="tsc" class="font-weight-bold">Total Story Count</label>
-    <input type="text" id="tsc" class="form-control" formControlName="totalStoryCount">
-  </div>
+            <div class="form-group col-md-6">
+              <label for="sysname" class="font-weight-bold">System</label>
+              <select
+                id="sysname"
+                class="form-control"
+                formControlName="system"
+              >
+                <option value="">Please Select</option>
+                <option [value]="sysn.id" *ngFor="let sysn of sysnames">{{
+                  sysn.name
+                }}</option>
+              </select>
+            </div>
 
-  <div class="form-group col-md-6">
-    <label for="tsp" class="font-weight-bold">Total Story Points</label>
-    <input type="number" id="tsp" class="form-control" formControlName="totalStoryPoints">
-  </div>
+            <div class="form-group col-md-6">
+              <label for="envname" class="font-weight-bold"
+                >Environment Name</label
+              >
+              <select
+                id="envname"
+                class="form-control"
+                formControlName="environment"
+              >
+                <option value="">Please Select</option>
+                <option [value]="env.id" *ngFor="let env of envnames">{{
+                  env.name
+                }}</option>
+              </select>
+            </div>
 
-  <div class="mt-2">
-  <div class="col-md-12">
-    <button type="submit" class="btn btn-outline-success btn-block">Start Project</button>
-  </div>
+            <div class="form-group col-md-6">
+              <label for="tsc" class="font-weight-bold"
+                >Total Story Count</label
+              >
+              <input
+                type="text"
+                id="tsc"
+                class="form-control"
+                formControlName="totalStoryCount"
+              />
+            </div>
+
+            <div class="form-group col-md-6">
+              <label for="tsp" class="font-weight-bold"
+                >Total Story Points</label
+              >
+              <input
+                type="number"
+                id="tsp"
+                class="form-control"
+                formControlName="totalStoryPoints"
+              />
+            </div>
+
+            <div class="mt-2">
+              <div class="col-md-12">
+                <button type="submit" class="btn btn-outline-success btn-block">
+                  Start Project
+                </button>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <!-- <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div> -->
+    </div>
   </div>
 </div>
-</form>
