--- a/src/app/views/qa-project/project-form/project-form.component.html
+++ b/src/app/views/qa-project/project-form/project-form.component.html
@@ -1,12 +1,12 @@
 <mat-card class="container">
   <form (ngSubmit)="onSubmit()" [formGroup]="projectFormGroup">
-    <div
-      class="form-element"
-      fxLayout
+    <div class="form-element">
+      <!--
+      fxLayout="column"
       fxLayout.xs="column"
       fxLayoutAlign="center"
       fxLayoutGap="10px"
-    >
+     -->
       <mat-form-field>
         <mat-label>Name</mat-label>
         <input
