feat: update project form
- add JIRA service and token

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-header [(title)]="title" (changeName)="onChangeName()"></app-header>
+  <app-header [(title)]="title"></app-header>
   <div class="container">
     <div id="content">
       <router-outlet></router-outlet>
