--- a/src/app/views/layout/footer/footer.component.html
+++ b/src/app/views/layout/footer/footer.component.html
@@ -25,7 +25,8 @@
           ></path>
         </g>
       </svg>
-      <small class="d-block mb-3 text-muted">{{title}} &copy; {{ copyRightYear | date: "yyyy" }}</small
+      <small class="d-block mb-3 text-muted"
+        >{{ title }} &copy; {{ copyRightYear | date: 'yyyy' }}</small
       >
     </div>
     <div class="col-6 col-md">
@@ -38,7 +39,7 @@
         <li><a class="text-muted" href="#">Another one</a></li>
         <li><a class="text-muted" href="#">Last time</a></li>
       </ul>-->
-    </div> 
+    </div>
     <div class="col-6 col-md">
       <!-- <h5>Resources</h5>
       <ul class="list-unstyled text-small">
