--- a/src/app/views/layout/header/header.component.html
+++ b/src/app/views/layout/header/header.component.html
@@ -36,14 +36,14 @@
     </a>
     <a
       class="py-2 d-none d-md-inline-block"
-      routerLink="/projects"
+      routerLink="/projects/list/false"
       routerLinkActive="router-link-active"
     >
       Current
     </a>
     <a
       class="py-2 d-none d-md-inline-block"
-      routerLink="/projects/archived"
+      routerLink="/projects/list/true"
       routerLinkActive="router-link-active"
     >
       Archives
