refactor: use the new strapi graphql api

--- a/src/app/views/qa-project/listing-form/listing-form.component.html
+++ b/src/app/views/qa-project/listing-form/listing-form.component.html
@@ -59,3 +59,10 @@
     showFirstLastButtons
   ></mat-paginator>
 </div>
+
+<ul *ngFor="let entry of gqlList | async">
+  project Name:
+  {{
+    entry.projectName
+  }}
+</ul>
