feat: add security component
- add signin component

- add me component only to be used when viewing your profile

- configure apollo to make requests

--- a/src/app/views/layout/header/header.component.html
+++ b/src/app/views/layout/header/header.component.html
@@ -50,7 +50,14 @@
     </a>
     <a
       class="py-2 d-none d-md-inline-block"
-      routerLink="/me"
+      routerLink="/security/signin"
+      routerLinkActive="router-link-active"
+    >
+      Sign In
+    </a>
+    <a
+      class="py-2 d-none d-md-inline-block"
+      routerLink="/security/me"
       routerLinkActive="router-link-active"
     >
       Me
