--- a/src/app/views/security/signin/signin.component.html
+++ b/src/app/views/security/signin/signin.component.html
@@ -18,9 +18,9 @@
         type="password"
       />
     </mat-form-field>
-    <mat-form-field class="signin-full-width" *ngIf="errorMessage">
+    <!-- <mat-form-field class="signin-full-width" *ngIf="errorMessage">
       <label matLabel class="form-control">{{errorMessage}}</label>
-    </mat-form-field>
+    </mat-form-field> -->
 
     <div class="signin-full-width">
       <button
