--- a/src/app/views/layout/header/header.component.html
+++ b/src/app/views/layout/header/header.component.html
@@ -48,7 +48,9 @@
     >
       Archives
     </a>
+
     <a
+      *ngIf="!hasToken"
       class="py-2 d-none d-md-inline-block"
       routerLink="/security/signin"
       routerLinkActive="router-link-active"
@@ -56,6 +58,7 @@
       Sign In
     </a>
     <a
+      *ngIf="hasToken"
       class="py-2 d-none d-md-inline-block"
       routerLink="/security/me"
       routerLinkActive="router-link-active"
