refactor: clean up ngrx rleease store - align naming from project to release - clean up the release store

--- a/src/app/views/qa-project/project/project.component.html
+++ b/src/app/views/qa-project/project/project.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="col-md-12">
     <app-listing-form
-      [projects]="projects$ | async"
+      [releases]="projects$ | async"
       (delete)="onDelete($event)"
       (select)="onSelect($event)"
     ></app-listing-form>
