--- a/src/app/views/qa-project/listing-form/listing-form.component.html
+++ b/src/app/views/qa-project/listing-form/listing-form.component.html
@@ -8,46 +8,24 @@
 
 <div class="mat-elevation-z8">
   <table mat-table matSort [dataSource]="dataSource">
-    <!-- Id Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
       <td mat-cell *matCellDef="let element">{{ element.id }}</td>
     </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    <ng-container matColumnDef="projectName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Project Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.projectName }}</td>
     </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="lead">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Lead</th>
-      <td mat-cell *matCellDef="let element">{{ element.leadName }}</td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="release">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Release</th>
+    <ng-container matColumnDef="releaseName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Release Name</th>
       <td mat-cell *matCellDef="let element">{{ element.releaseName }}</td>
     </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="customer">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
-      <td mat-cell *matCellDef="let element">{{ element.customerName }}</td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="points">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Points</th>
-      <td mat-cell *matCellDef="let element">{{ element.totalStoryPoints }}</td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="count">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Items</th>
-      <td mat-cell *matCellDef="let element">{{ element.totalStoryCount }}</td>
+    <ng-container matColumnDef="person">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Lead</th>
+      <td mat-cell *matCellDef="let element">{{ element.person.firstname }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
