refactor: use the ngrx to store jwt - add helper functions to access the ngrx store: -- for http interceptor -- for auth guard validations - work on persiting the state tree after refresh

--- a/src/app/views/layout/header/header.component.html
+++ b/src/app/views/layout/header/header.component.html
@@ -50,7 +50,7 @@
     </a>
 
     <a
-      *ngIf="!hasToken"
+      *ngIf="!hasToken$ | async"
       class="py-2 d-none d-md-inline-block"
       routerLink="/security/signin"
       routerLinkActive="router-link-active"
@@ -58,7 +58,7 @@
       Sign In
     </a>
     <a
-      *ngIf="hasToken"
+      *ngIf="hasToken$ | async"
       class="py-2 d-none d-md-inline-block"
       routerLink="/security/me"
       routerLinkActive="router-link-active"
