--- a/src/app/views/qa-project/listing-form/listing-form.component.html
+++ b/src/app/views/qa-project/listing-form/listing-form.component.html
@@ -1,8 +1,10 @@
 <mat-form-field>
+  <mat-label>Filter</mat-label>
   <input
     matInput
     (keyup)="applyFilter($event.target.value)"
-    placeholder="Filter"
+    placeholder="Sprint 15"
+    type="text"
   />
 </mat-form-field>
 
@@ -25,7 +27,9 @@
 
     <ng-container matColumnDef="person">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Lead</th>
-      <td mat-cell *matCellDef="let element">{{ element.person.firstname }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.person.firstname + ' ' + element.person.lastname }}
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
