--- a/src/app/views/security/signin/signin.component.css
+++ b/src/app/views/security/signin/signin.component.css
@@ -2,6 +2,10 @@
   min-width: 150px;
   max-width: 500px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .signin-full-width {
