--- a/src/app/views/security/signin/signin.component.html
+++ b/src/app/views/security/signin/signin.component.html
@@ -17,6 +17,12 @@
       />
     </mat-form-field>
 
+    <p *ngIf="isLoading$ | async">is loading...</p>
+
+    <p *ngIf="errorMessage$ | async">{{ errorMessage$ | async }}</p>
+
+    <p *ngIf="authenticated$ | async">{{ authenticated$ | async }}</p>
+
     <div class="signin-full-width">
       <button
         type="button"
