feat: swap all ngrx calls to ngxs calls

--- a/src/app/views/layout/header/header.component.html
+++ b/src/app/views/layout/header/header.component.html
@@ -71,7 +71,7 @@
       routerLink="/security/me"
       routerLinkActive="router-link-active"
     >
-      Has Token: {{ hasToken }}
+      is Auth: {{ hasToken }}
     </a>
   </div>
 </nav>
