--- a/src/app/views/qa-project/project/project.component.html
+++ b/src/app/views/qa-project/project/project.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <app-project-form
-      [project]="project"
+      [project]="project$"
       [releaseOptions]="projectOptions$ | async"
       [qaPeople]="qaPeople$ | async"
       (update)="onUpdate($event)"
