--- a/src/app/views/security/me/me.component.html
+++ b/src/app/views/security/me/me.component.html
@@ -1,10 +1,10 @@
-<mat-card *ngIf="profile && profile.me">
+<mat-card *ngIf="profile$">
   <mat-card-header>
-    <mat-card-title> Username: {{ profile.me.username }} </mat-card-title>
+    <mat-card-title> Username: {{ profile$.me.username }} </mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <p>Role: {{ profile.me.role.name }}</p>
-    <p>Email: {{ profile.me.email }}</p>
+    <p>Role: {{ profile$.me.role.name }}</p>
+    <p>Email: {{ profile$.me.email }}</p>
   </mat-card-content>
   <mat-card-footer> </mat-card-footer>
 </mat-card>
