feat: use state selectors - update all state selectors to use @Selector instead of snapshot - attempt to dispatch actions after signing in

--- a/src/app/views/layout/header/header.component.html
+++ b/src/app/views/layout/header/header.component.html
@@ -71,7 +71,7 @@
       routerLink="/security/me"
       routerLinkActive="router-link-active"
     >
-      is Auth: {{ hasToken }}
+      is Auth: {{ token$ | async }}
     </a>
   </div>
 </nav>
