chore: enable brower state store - correct state slices for project listing - general clean up

--- a/src/app/views/qa-project/project-form/project-form.component.html
+++ b/src/app/views/qa-project/project-form/project-form.component.html
@@ -45,7 +45,7 @@
       <input
         required
         formControlName="customerName"
-        placeholder="AIG"
+        placeholder="Customer X"
         type="text"
         matInput
       />
