--- a/src/app/views/qa-project/project/project.component.html
+++ b/src/app/views/qa-project/project/project.component.html
@@ -8,9 +8,8 @@
       (add)="onAdd($event)"
     ></app-project-form>
   </div>
-  <div class="col-md-12">
-    <br />
-  </div>
+</div>
+<div class="row">
   <div class="col-md-12">
     <app-listing-form
       [releases]="projects$ | async"
