feat: capture new project

--- a/src/app/views/qa-project/project-form/project-form.component.css
+++ b/src/app/views/qa-project/project-form/project-form.component.css
@@ -18,3 +18,12 @@
 .example-container .mat-radio-button {
   margin: 0 12px;
 }
+
+.project-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.project-form-item {
+  flex: content;
+}
