--- a/src/app/views/qa-project/task-form/task-form.component.html
+++ b/src/app/views/qa-project/task-form/task-form.component.html
@@ -56,7 +56,7 @@
         />
       </mat-form-field>
 
-      <mat-form-field>
+      <div>
         <mat-label>Attachments</mat-label>
         <input
           required
@@ -64,9 +64,8 @@
           class="form-control"
           placeholder="Supporting Documents"
           type="file"
-          matInput
         />
-      </mat-form-field>
+      </div>
 
       <div class="example-button-row">
         <button
